// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all challenges are passed through to the wrapped component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithSortedChallenges
    challenges={
        Array [
            Object {
              "id": 1,
            },
            Object {
              "featured": true,
              "id": 2,
            },
            Object {
              "id": 3,
            },
            Object {
              "featured": true,
              "id": 4,
            },
          ]
    }
    user={
        Object {
            "savedChallenges": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "challenges": Array [
        Object {
          "featured": true,
          "id": 2,
        },
        Object {
          "featured": true,
          "id": 4,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 3,
        },
      ],
      "user": Object {
        "savedChallenges": Array [],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "challenges": Array [
          Object {
            "featured": true,
            "id": 2,
          },
          Object {
            "featured": true,
            "id": 4,
          },
          Object {
            "id": 1,
          },
          Object {
            "id": 3,
          },
        ],
        "user": Object {
          "savedChallenges": Array [],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`challenges saved by the user come ahead of normal challenges 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithSortedChallenges
    challenges={
        Array [
            Object {
              "id": 1,
            },
            Object {
              "featured": true,
              "id": 2,
            },
            Object {
              "id": 3,
            },
            Object {
              "featured": true,
              "id": 4,
            },
          ]
    }
    user={
        Object {
            "savedChallenges": Array [
              Object {
                "id": 3,
              },
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "challenges": Array [
        Object {
          "id": 3,
        },
        Object {
          "featured": true,
          "id": 2,
        },
        Object {
          "featured": true,
          "id": 4,
        },
        Object {
          "id": 1,
        },
      ],
      "user": Object {
        "savedChallenges": Array [
          Object {
            "id": 3,
          },
        ],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "challenges": Array [
          Object {
            "id": 3,
          },
          Object {
            "featured": true,
            "id": 2,
          },
          Object {
            "featured": true,
            "id": 4,
          },
          Object {
            "id": 1,
          },
        ],
        "user": Object {
          "savedChallenges": Array [
            Object {
              "id": 3,
            },
          ],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`featured challenges come ahead of normal challenges 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithSortedChallenges
    challenges={
        Array [
            Object {
              "id": 1,
            },
            Object {
              "featured": true,
              "id": 2,
            },
            Object {
              "id": 3,
            },
            Object {
              "featured": true,
              "id": 4,
            },
          ]
    }
    user={
        Object {
            "savedChallenges": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "challenges": Array [
        Object {
          "featured": true,
          "id": 2,
        },
        Object {
          "featured": true,
          "id": 4,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 3,
        },
      ],
      "user": Object {
        "savedChallenges": Array [],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "challenges": Array [
          Object {
            "featured": true,
            "id": 2,
          },
          Object {
            "featured": true,
            "id": 4,
          },
          Object {
            "id": 1,
          },
          Object {
            "id": 3,
          },
        ],
        "user": Object {
          "savedChallenges": Array [],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`saved and featured challenges come ahead of everything else 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithSortedChallenges
    challenges={
        Array [
            Object {
              "id": 1,
            },
            Object {
              "featured": true,
              "id": 2,
            },
            Object {
              "id": 3,
            },
            Object {
              "featured": true,
              "id": 4,
            },
          ]
    }
    user={
        Object {
            "savedChallenges": Array [
              Object {
                "id": 3,
              },
              Object {
                "featured": true,
                "id": 4,
              },
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "challenges": Array [
        Object {
          "featured": true,
          "id": 4,
        },
        Object {
          "id": 3,
        },
        Object {
          "featured": true,
          "id": 2,
        },
        Object {
          "id": 1,
        },
      ],
      "user": Object {
        "savedChallenges": Array [
          Object {
            "id": 3,
          },
          Object {
            "featured": true,
            "id": 4,
          },
        ],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "challenges": Array [
          Object {
            "featured": true,
            "id": 4,
          },
          Object {
            "id": 3,
          },
          Object {
            "featured": true,
            "id": 2,
          },
          Object {
            "id": 1,
          },
        ],
        "user": Object {
          "savedChallenges": Array [
            Object {
              "id": 3,
            },
            Object {
              "featured": true,
              "id": 4,
            },
          ],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
